--- a/index.css
+++ b/index.css
@@ -98,7 +98,8 @@ body{
 		}
 		#box{
 			display: flex;
-			
+			flex-direction: column;
+                        justify-content:space-around;
 			flex-wrap: wrap;
 		}
 
