--- a/index.css
+++ b/index.css
@@ -98,8 +98,7 @@ body{
 		}
 		#box{
 			display: flex;
-			flex-direction: column;
-                        justify-content:space-around;
+                        justify-content:space-between;
 			flex-wrap: wrap;
 		}
 
