--- a/index.css
+++ b/index.css
@@ -27,7 +27,7 @@ body{
 			font-family: georgia;
 			font-weight: bold;
 		}
-		input:hover{
+		#time:hover{
 			background-color: yellow;
 			border:2px ridge yellow;
 			border-radius: 10px;
