--- a/index.css
+++ b/index.css
@@ -28,7 +28,7 @@ body{
 			font-weight: bold;
 		}
 		#time:hover{
-			background-color: transparent;
+			background-color:white;
 			border:2px ridge black;
 			box-shadow:1px 1px 1px 4px aqua;
 			border-radius: 10px;
