--- a/index.css
+++ b/index.css
@@ -40,7 +40,7 @@ body{
 		#fre:hover{
 			background-color:lightgray;
 			border:2px ridge black;
-			box-shadow:1px 1px 3px 3px aqua;
+			box-shadow:1px 1px 3px 3px red;
 			border-radius: 10px;
 			outline: none;
 		}
