--- a/index.css
+++ b/index.css
@@ -35,14 +35,19 @@ body{
 			outline: none;
 		}
 		#delay:hover{
-                       cursor:not-allowed; background-color: skyblue;}
-  
+                       cursor:not-allowed; background-color:red;color:white}
+                #count:hover{
+                       cursor:not-allowed; background-color: red; color:white}
+                #delay:hover{
+                       cursor:not-allowed; background-color: red; color:white}
+                #hex:hover{
+                       cursor:not-allowed; background-color: red; color:white}
 
 
 		#fre:hover{
 			background-color:lightgray;
 			border:2px ridge black;
-			box-shadow:1px 1px 3px 3px red;
+			box-shadow:1px 1px 3px 3px aqua;
 			border-radius: 10px;
 			outline: none;
 		}
