--- a/index.css
+++ b/index.css
@@ -29,9 +29,8 @@ body{
 		}
 		#time:hover{
 			background-color:white;
-			border:2px ridge black;
-			outline:none;
-			box-shadow:1px 1px 1px 3px aqua;
+			border:2px ridge black;			
+			box-shadow:1px 1px 1px 3px lime;
 			border-radius: 10px;
 			outline: none;
 		}
@@ -43,9 +42,9 @@ body{
                        cursor:not-allowed; background-color:pink;color:darkblue;}           
 
 		#fre:hover{
-			background-color:lightgray;
+			background-color:white;
 			border:2px ridge black;
-			box-shadow:1px 1px 3px 3px aqua;
+			box-shadow:1px 1px 3px 3px lime;
 			border-radius: 10px;
 			outline: none;
 		}
