--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ body{
 			border:2px groove black;
 			height: 600px;
 			width: 500px;
-			box-shadow: 1px  1px 1px 4px yellow;
+			box-shadow: 1px  1px 1px 4px white;
 			border-radius: 10px;
 		}
 		input{
