--- a/index.css
+++ b/index.css
@@ -84,6 +84,8 @@ body{
 			border:2px solid black;
 			border-collapse: collapse;
 		}
+                #table1{
+			width:40%;height: 80px;font-size: 20px;}
 		#flex0{
 			display: flex;
 			width: 100%;
