--- a/index.css
+++ b/index.css
@@ -120,5 +120,7 @@ body{
                         justify-content:space-between;
 			flex-wrap: wrap;
 		}
+		 #table1{
+			width:70%;height: 80px;font-size: 20px;}
 
 		}
