--- a/index.css
+++ b/index.css
@@ -91,6 +91,7 @@ body{
 			border:2px solid black;
 			background-color: aqua;
 			flex-direction: row-reverse;
+			border-radius:7px;
 		}
 		#flex1{
 			align-self: flex-start;
